--- a/src/components/projects/each-project-item.css
+++ b/src/components/projects/each-project-item.css
@@ -6,7 +6,7 @@
   width: 700px;
 }
 
-.project-item-container  > h3 > span{
+.project-item-container  > h1{
   font-size: 3vh;
   background-color: black;
   display: inline-block;
@@ -77,7 +77,7 @@
   
     width: 100%;
   }
-	.project-item-container > h3 > span {
+	.project-item-container > h1 {
 		font-size: 2.8vh;
 	}
  
@@ -92,7 +92,7 @@
   
     width: 100%;
   }
-	.project-item-container > h3 > span {
+	.project-item-container > h1 {
 		font-size: 2.5vh;
 	}
  
