--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: black;
+  /* background-color: black; */
 }
 
 .contact-container > * {
