--- a/src/components/cheer/cheer.css
+++ b/src/components/cheer/cheer.css
@@ -47,7 +47,7 @@
 .cheer-up > span {
   cursor: pointer;
   margin-top: 30px;
-  height: 25px;
+  /* height: 25px; */
   font-size: 1.5vh;
   text-decoration: underline;
   background-color: rgb(0, 0, 0);
