--- a/src/index.css
+++ b/src/index.css
@@ -159,11 +159,13 @@ body::-webkit-scrollbar {
   /* justify-content: center; */
   /* left: 50%; */
   /* bottom: 0; */
+  background: rgba(0, 0, 0, 0.9);;
   text-align: center;
-  position: absolute;
+  /* position: sticky; */
+  /* bottom: -100; */
   bottom: 0;
   /* width: 800px; */
-  height: 2rem;
+  /* height: 1rem; */
 }
 .footer > p {
   color: rgb(255, 255, 255);
