--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,7 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-body,
-html {
+body{
   height: 100%;
   margin: 0;
   background-color: black;
@@ -33,10 +32,10 @@ header {
   position: fixed;
   top: 50%;
   left: 50%;
-  height: 0.5px;
-  width: 0.5px;
+  height: 0.3px;
+  width: 0.3px;
   background-color: #fff;
-  border-radius: 50%;
+  border-radius: 90%;
   z-index: -1;
   box-shadow:
     43vw -10vh 0px 3px #fff,
