--- a/src/components/home/logo.css
+++ b/src/components/home/logo.css
@@ -3,7 +3,7 @@
   justify-content: center;
 }
 .logo-button{
-  background-color: transparent;
+  background-color: black;
   border: none;
   padding: 0;
   margin: 0;
