--- a/src/components/about/about-me.css
+++ b/src/components/about/about-me.css
@@ -10,6 +10,7 @@
   /* flex-wrap: wrap; */
   justify-content: space-around;
   /* flex: 100%; */
+
 }
 
 .previous {
@@ -17,7 +18,13 @@
   width: 90px;
   text-align: center;
   font-size: 1.5vh;
+  background-color: rgb(255, 255, 255) !important;
+  box-shadow: 0 0.2em rgb(202, 201, 201) !important;
+  color: black !important;
   
+}
+.previous:disabled{
+  cursor: not-allowed;
 }
 
 .next {
@@ -25,6 +32,12 @@
   /* width: 30%; */
   font-size: 1.5vh;
   text-align: center;
+  background-color: rgb(255, 255, 255) !important;
+   box-shadow: 0 0.2em rgb(202, 201, 201) !important;
+   color: black !important;
+}
+.next:disabled{
+  cursor: not-allowed;
 }
 
 @media screen and (max-width: 760px) {
