--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -22,13 +22,15 @@
   margin: 5px;
   font-weight: bold;
   padding: 10px 10px 10px 10px;
-  background-color: rgb(255, 255, 255);
+  /* background-color: rgb(255, 255, 255); */
+  background-color: #fdd612;
   color: rgb(0, 0, 0);
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
   -o-border-radius: 7px;
   border-radius: 7px;
-  box-shadow: 0 0.2em rgb(202, 201, 201);
+  /* box-shadow: 0 0.2em rgb(202, 201, 201); */
+  box-shadow: 0 0.2em #d4b101; 
   cursor: pointer;
   text-decoration: none;
   width: 150px;
